Update meta data description

--- a/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
+++ b/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
@@ -59,7 +59,7 @@ types:
       required: true
     meta:
       type: meta
-      description: ejejeje
+      description: meta data
       required: false
   domains:
     meta:
