--- a/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
+++ b/plugins/cisco_umbrella_enforcement/plugin.spec.yaml
@@ -9,7 +9,7 @@ status: []
 description: This plugin utilizes Cisco Umbrella Enforcement to inherit the ability to send
   security events from platform/service/appliance within a customer environment
   to the Cisco security cloud for enforcement
-version: 1.0.1
+version: 2.0.0
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/cisco_umbrella_enforcement
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
@@ -24,88 +24,6 @@ hub_tags:
   features: []
 language: python
 types:
-  event:
-    ID:
-      type: string
-      description: The ID of the device sending the event
-      required: true
-    deviceVersion:
-      type: string
-      description: Version of device sending the event
-      required: true
-    eventTime:
-      type: string
-      description: Time event was detected, must match the following style 2013-02-08T09:30:26Z
-      required: true
-    alertTime:
-      type: string
-      description: Time event was sent to Umbrella must match the following style
-        2013-02-08T09:30:26Z
-      required: true
-    dstDomain:
-      type: string
-      description: The destination domain, specified following RFC3986 encoding guidelines
-        and without the protocol included. An example would be www.internetbadguys.com
-      required: true
-    dstURL:
-      type: string
-      description: The destination URL encoded using standard percent-encoding following
-        RFC3986](http://www.ietf.org/rfc/rfc3986.txt) encoding guidelines. An example
-        would be http://internetbadguys.com/security?foo=there%20are%20spaces%20here
-      required: true
-    protocolVersion:
-      type: string
-      description: The version of the protocol for the API. Value should always be
-        1.0a
-      required: true
-    providerName:
-      type: string
-      description: The provider name for the API. Value should always be Security
-        Platform
-      required: true
-    disableDstSafeguards:
-      type: boolean
-      description: A value of 'true' will bypass validations normally performed against
-        submitted events before adding them to any of the domain lists in Umbrella
-      required: false
-    eventHash:
-      type: string
-      description: A unique hash of the event
-      required: false
-    fileName:
-      type: string
-      description: Path to file exhibiting malicious behavior
-      required: false
-    fileHash:
-      type: string
-      description: SHA-1 of file reported by appliance
-      required: false
-    externalURL:
-      type: string
-      description: External page containing additional information about event
-      required: false
-    src:
-      type: string
-      description: IP/Host of the infected computer/device that was patient 0 for
-        the event
-      required: false
-    dstIP:
-      type: string
-      description: The destination IP of the domain, specified in IPv4 dotted-decimal
-        notation. An example would be 8.8.8.8
-      required: false
-    eventSeverity:
-      type: string
-      description: 'The parter threat level or rating, eg: severe, bad, high, etc'
-      required: false
-    eventType:
-      type: string
-      description: Common name or classification of threat
-      required: false
-    eventDescription:
-      type: string
-      description: Variant or other descriptor of event type
-      required: false
   meta:
     page:
       type: integer
@@ -116,34 +34,48 @@ types:
       description: The number of results
       required: true
     prev:
-      type: string
+      type: boolean
       description: If prev is false, this is the first available page of results.
         Otherwise, it will provide a query formatted to show the next set of results
       required: true
     next:
-      type: string
+      type: boolean
       description: If next is false, this is the last available page of results. Otherwise,
         it will provide a query formatted to show the next set of results
       required: true
   data:
-    ID:
-      type: integer
-      description: Unique ID number
-      required: true
     name:
       type: string
       description: Domain name
       required: true
+    id:
+      type: integer
+      description: Unique ID number
+      required: true
     lastSeenAt:
-      type: string
+      type: integer
       title: Last seen malware
       description: Unix timestamp last seen
+      required: true
+    meta:
+      type: meta
+      description: meta data
+      required: false
+  domains:
+    meta:
+      type: meta
+      description: Meta Data
+      required: true
+    data:
+      type: '[]data'
+      description: List of domains
       required: true
 connection:
   api_key:
     title: API Key
     type: credential_secret_key
-    description: Enter API key e.g. 1111-2222-3333-4444
+    description: Cisco Umbrella Management API key
+    example: 9de5069c5afe602b2ea0a04b66beb2c0
     required: true
 actions:
   add_event:
@@ -151,33 +83,133 @@ actions:
     description: Posts a malware event for processing and optionally adds it to the
       customer's domain list
     input:
-      events:
-        type: '[]event'
-        description: Generic event format field. More info at https://docs.umbrella.com/developer/enforcement-api/generic-event-format2/
+      alertTime:
+        title: Alert Time
+        description: The time the event was sent to Umbrella
+        type: string
+        example: 2013-02-08T09:30:26Z
         required: true
+      deviceId:
+        title: Device ID
+        description: The ID of the device sending the event
+        type: string
+        example: 12345678-1234-1234-1234-123456789123
+        required: true
+      deviceVersion:
+        title: Device Version
+        description: The version of the device sending the event
+        type: string
+        example: 1.0a
+        required: true
+      dstDomain:
+        title: Destination Domain
+        description: The destination domain specified (follow RFC 3986 encoding guidelines)
+        type: string
+        example: www.internetbadguys.com
+        required: true
+      dstIP:
+        title: Destination IP
+        description: The destination UP of the domain, specified in IPv4 dotted-decimal notation
+        type: string
+        example: 8.8.8.8
+        required: false
+      dstUrl:
+        title: Destination URL
+        description: The destination URL specified (follow RFC 3986 encoding guidelines)
+        type: string
+        example: http://internetbadguys.com/security?foo=there%20are%20spaces%20here
+        required: true
+      eventDescription:
+        title: Event Description
+        description: Variant or other descriptor of event type
+        type: string
+        example: some other threat
+        required: false
+      eventHash:
+        title: Event Hash
+        description: A unique hash of the event
+        type: string
+        example: 9de5069c5afe602b2ea0a04b66beb2c0
+        required: false
+      eventSeverity:
+        title: Event Severity
+        description: The partner threat level or rating
+        type: string
+        example: severe, bad, high
+        required: false
+      eventTime:
+        title: Event Time
+        description: The time the event was detected
+        type: string
+        example: 2013-02-08T09:30:26Z
+        required: true
+      eventType:
+        title: Event Type
+        description: Common name or classification of threat
+        type: string
+        example: severe
+        required: false
+      externalURL:
+        title: External URL
+        description: External page containing additional information about event
+        type: string
+        example: https://link-to-external-page.txt
+        required: false
+      fileHash:
+        title: File Hash
+        description: SHA-1 of file reported by appliance
+        type: string
+        example: 02699626f388ed830012e5b787640e71c56d42d8
+        required: false
+      fileName:
+        title: File Name
+        description: Path to file exhibiting malicious behaviour
+        type: string
+        example: /path/to/file
+        required: false
+      protocolVersion:
+        title: Protocol Version
+        description: The version of the protocol for the API
+        type: string
+        example: 1.0a
+        default: 1.0a
+        required: true
+      providerName:
+        title: Provider Name
+        description: The provider name for the API
+        type: string
+        example: Security Platform
+        default: Security Platform
+        required: true
+      src:
+        title: Src
+        description: The first IP or hostname associated with the infected device
+        type: string
+        example: 192.168.0.1
+        required: false
+      disableDstSafeguards:
+        title: Disable Destination Safeguards
+        description: True bypasses validations normally performed against submitted events
+        type: boolean
+        example: false
+        default: false
+        required: false
     output:
       ID:
         title: ID List
-        description: List of added IDs
-        type: '[]string'
+        description: Object containing added IDs
+        type: object
         required: true
   domains:
     title: List Domains
     description: Gather the lists of domains already added to the shared customer's
       domain list
     output:
-      meta:
-        title: Meta
-        description: The meta array shows which page of results is available, the
-          number of results and next and previous available pages to query
-        type: meta
-        required: true
-      data:
+      domains:
         title: Domain List Query Results
-        description: The data array contains the domains in the domain list, along
-          with a unique ID number for each domain
-        type: '[]data'
-        required: true
+        description: Array containing domains in the domain list
+        type: domains
+        required: false
   delete_domain_by_id:
     title: Delete Domain by ID
     description: Delete domain from user domain list by ID
@@ -186,25 +218,27 @@ actions:
         type: integer
         title: ID
         description: Unique ID number of domain
+        example: 1234567
         required: true
     output:
-      status:
-        title: Status
+      success:
+        title: Success
         description: Action status [success | error]
-        type: string
+        type: boolean
         required: true
   delete_domain_by_name:
     title: Delete Domain by Name
     description: Delete domain from user domain list
     input:
-      domain:
+      name:
         type: string
         title: Domain
         description: Domain name
+        example: internetbadguys.bad-v5.com
         required: true
     output:
-      status:
-        title: Status
+      success:
+        title: Success
         description: Action status [success | error]
-        type: string
+        type: boolean
         required: true
