--- a/plugins/rest/plugin.spec.yaml
+++ b/plugins/rest/plugin.spec.yaml
@@ -111,16 +111,16 @@ actions:
         example: '{"Host": "rapid7.com"}'
       body_object:
         title: Body (Object)
-        description: Data to submit to the server when making the HTTP Request call
+        description: Payload to submit to the server when making the HTTP Request call
         type: object
         required: false
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (non-dictionary) to submit to the server when making the HTTP Request call
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
         type: string
         required: false
-        example: 'Any type can be here, ints, arrays, you name it!'
+        example: 'test data'
     output:
       body_object:
         title: Body Object
@@ -166,10 +166,10 @@ actions:
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (non-dictionary) to submit to the server when making the HTTP Request call
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
         type: string
         required: false
-        example: 'Any type can be here, ints, arrays, you name it!'
+        example: 'test data'
     output:
       body_object:
         title: Body Object
@@ -215,10 +215,10 @@ actions:
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (non-dictionary) to submit to the server when making the HTTP Request call
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
         type: string
         required: false
-        example: 'Any type can be here, ints, arrays, you name it!'
+        example: 'test data'
     output:
       body_object:
         title: Body Object
@@ -264,10 +264,10 @@ actions:
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (non-dictionary) to submit to the server when making the HTTP Request call
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
         type: string
         required: false
-        example: 'Any type can be here, ints, arrays, you name it!'
+        example: 'test data'
     output:
       body_object:
         title: Body Object
@@ -313,10 +313,10 @@ actions:
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (non-dictionary) to submit to the server when making the HTTP Request call
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
         type: string
         required: false
-        example: 'Any type can be here, ints, arrays, you name it!'
+        example: 'test data'
     output:
       body_object:
         title: Body Object
