--- a/plugins/sentinelone/plugin.spec.yaml
+++ b/plugins/sentinelone/plugin.spec.yaml
@@ -1570,7 +1570,7 @@ actions:
         description: ID of a threat
         type: string
         required: true
-        example: 1000000000000000000
+        example: "1000000000000000000"
       action:
         title: Action
         description: Mitigation action
@@ -1855,14 +1855,14 @@ actions:
         required: true
         example: "1000000000000000000"
       file_path:
-        title: File path
-        description: List of files paths of files to fetch. Any files retrieved will be uploaded to the SentinelOne console for download.
+        title: File Path
+        description: List of files paths of files to fetch. Any files retrieved will be uploaded to the SentinelOne console for download
         type: string
         required: true
         example: "C:/windows/system32/winevt/logs/application.evtx"
       password:
         title: Password
-        description: Password to encrypt retrieved files with. Must be entered when files are downloaded on SentinelOne console. File encryption password, min. length 10 characters and cannot contain whitespace.
+        description: Password to encrypt retrieved files with. Must be entered when files are downloaded on SentinelOne console. File encryption password, min. length 10 characters and cannot contain whitespace
         type: 'string'
         required: true
         example: "MySecretPass123!"
@@ -2751,16 +2751,19 @@ actions:
         description: IDs of the agents to execute the script on. If no IDs provided, the script will run on ALL applicable agents. This id can be retrieved by using the get agent details action if neccessary
         type: '[]string'
         required: false
+        example: '["100000000000000000"]'
       script_id:
         title: Script ID
         description: ID of the script to run (select the ID of a SentinelOne or user script from SentinelOne console)
         type: string
         required: true
+        example: "1234567891234"
       task_description:
         title: Task Description
         description: Task Description
         type: string
         required: true
+        example: "Task Description"
       output_destination:
         title: Output Destination
         description: Output destination of any script output
@@ -2769,32 +2772,36 @@ actions:
           - Local
           - None
           - SentinelCloud
-        example: None
+        example: SentinelCloud
         required: true
       output_directory:
         title: Output Directory
         description: Output Directory (Only relevant if Local is selected for Output Destination)
         type: string
         required: false
+        example: "/tmp/script_output"
       password:
         title: Password
-        description: Password (Only relevant if SentinelCloud is selected for Output Destination)
+        description: Password (Only relevant if SentinelCloud is selected for Output Destination). At least 10 characters and no whitespace
         type: string
         required: false
+        example: "Password123??"
       input_parameters:
-        title: Input script parameters
+        title: Input Script Parameters
         description: Parameters which will be passed to the remote script (may or may not be required, depending on script)
         type: string
         required: false
+        example: "input_parameter1"
       timeout:
         title: Script Execution Timeout
         description: Script runtime timeout (in seconds) for current execution (Value between 60 and 172800 seconds)
         type: integer
         required: false
         default: 3600
+        example: 3600
     output:
       affected:
-        description: Number of entities affected by requested operation. For detailed output from running the script, log onto the SentinelOne console. Note this may be lower than the number of agent ids submitted if the script cannot be run on a particular agent e.g. due to OS type.
+        description: Number of entities affected by requested operation. For detailed output from running the script, log onto the SentinelOne console. Note this may be lower than the number of agent ids submitted if the script cannot be run on a particular agent e.g. due to OS type
         type: integer
         required: true
 triggers:
