--- a/plugins/sentinelone/plugin.spec.yaml
+++ b/plugins/sentinelone/plugin.spec.yaml
@@ -2804,6 +2804,7 @@ actions:
         description: Number of entities affected by requested operation. For detailed output from running the script, log onto the SentinelOne console. Note this may be lower than the number of agent ids submitted if the script cannot be run on a particular agent e.g. due to OS type
         type: integer
         required: true
+        example: 2
 triggers:
   get_threats:
     title: Get Threats
